# src/internal/docs/swagger.yaml
@@ -1,13 +1,9 @@
 basePath: /
 definitions:
-  annot_handler.RequestAddAnnot:
+  annot_handler.RequestID:
     properties:
-      class_label:
+      id:
         type: integer
-      error_bb:
-        items:
-          type: number
-        type: array
     type: object
   annot_handler.RequestUpdate:
     properties:
@@ -62,6 +58,27 @@ definitions:
       status:
         type: string
     type: object
+  annot_type_handler.RequestAnnotType:
+    properties:
+      class_name:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+    type: object
+  annot_type_handler.RequestID:
+    properties:
+      id:
+        type: integer
+    type: object
+  annot_type_handler.RequestIDs:
+    properties:
+      ids:
+        items:
+          type: integer
+        type: array
+    type: object
   annot_type_handler.ResponseGetByID:
     properties:
       class_name:
@@ -74,6 +91,17 @@ definitions:
         type: string
       id:
         type: integer
+      status:
+        type: string
+    type: object
+  annot_type_handler.ResponseGetTypes:
+    properties:
+      error:
+        type: string
+      markupTypes:
+        items:
+          $ref: '#/definitions/models_dto.MarkupType'
+        type: array
       status:
         type: string
     type: object
@@ -95,6 +123,11 @@ definitions:
         type: string
       response:
         $ref: '#/definitions/response.Response'
+    type: object
+  document_handler.RequestID:
+    properties:
+      ID:
+        type: string
     type: object
   document_handler.RequestPassed:
     properties:
@@ -162,6 +195,17 @@ definitions:
       was_checked:
         type: boolean
     type: object
+  models_dto.MarkupType:
+    properties:
+      class_name:
+        type: string
+      creator_id:
+        type: integer
+      description:
+        type: string
+      id:
+        type: integer
+    type: object
   models_dto.User:
     properties:
       group:
@@ -188,6 +232,24 @@ definitions:
       status:
         type: string
     type: object
+  user_handler.RequestChangeRole:
+    properties:
+      login:
+        type: string
+      req_role:
+        $ref: '#/definitions/models.Role'
+    type: object
+  user_handler.ResponseGetAllUsers:
+    properties:
+      error:
+        type: string
+      status:
+        type: string
+      users:
+        items:
+          $ref: '#/definitions/models_dto.User'
+        type: array
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -202,6 +264,38 @@ info:
   title: Annoter
   version: "1.0"
 paths:
+  /annot/add:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Adds an annotation to a specific document
+      parameters:
+      - description: PNG image to add
+        in: formData
+        name: annotFile
+        required: true
+        type: file
+      - in: formData
+        name: class_label
+        type: integer
+      - collectionFormat: csv
+        in: formData
+        items:
+          type: number
+        name: error_bb
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Add an annotation
+      tags:
+      - Annotation
   /annot/check:
     post:
       consumes:
@@ -222,51 +316,57 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Modifies markup and marks it as checked
       tags:
-      - Annotations
+      - Annotation
   /annot/creatorID:
     get:
       consumes:
       - application/json
-      description: Get the specific annotation by ID
-      parameters:
-      - description: Annotation ID
-        in: path
-        name: id
-        required: true
-        type: string
+      description: Getting all anottattions from a database, which were created by
+        currently logged user
       produces:
       - application/json
       responses:
         "200":
-          description: Annotation not found
+          description: OK
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Get a specific annotation
+      security:
+      - ApiKeyAuth: []
+      summary: Getting all anotattions created by a user
       tags:
-      - Annotations
+      - Annotation
   /annot/get:
-    get:
+    post:
       consumes:
       - application/json
       description: Get the specific annotation by ID
       parameters:
-      - description: Annotation ID
-        in: path
-        name: id
+      - description: Annot ID
+        in: body
+        name: AnnotID
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/annot_handler.RequestID'
       produces:
       - application/json
       responses:
         "200":
-          description: Annotation not found
+          description: OK
+          schema:
+            $ref: '#/definitions/annot_handler.ResponseGetAnnot'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Get a specific annotation
       tags:
-      - Annotations
+      - Annotation
   /annot/getsAll:
     get:
       consumes:
@@ -280,49 +380,130 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Getting all anottattions from a database
       tags:
-      - Annotations
-  /annotations/add:
+      - Annotation
+  /annotType/add:
     post:
       consumes:
-      - multipart/form-data
-      description: Adds an annotation to a specific document
+      - application/json
+      description: Create and save the new anotattion type, as created by signed in
+        user
       parameters:
-      - description: PNG image to add
-        in: formData
-        name: annotFile
-        required: true
-        type: file
-      - description: Annotation parameters (bboxes and class)
+      - description: data for inserting new annotType
         in: body
-        name: annotParams
+        name: NewAnnotTypeParams
         required: true
         schema:
-          $ref: '#/definitions/annot_handler.RequestAddAnnot'
+          $ref: '#/definitions/annot_type_handler.RequestAnnotType'
       produces:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Annotation type not found
           schema:
             $ref: '#/definitions/response.Response'
       security:
       - ApiKeyAuth: []
-      summary: Add an annotation
+      summary: Add new anotattion type
       tags:
-      - Annotation
-  /document/getDocumentByID:
+      - Annotation types
+  /annotType/creatorID:
     get:
+      consumes:
+      - application/json
+      description: Get all anotattions which were created by specific user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Annotation type not found
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get a annotation type of a signed in user
+      tags:
+      - Annotation types
+  /annotType/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an anotattion by specific ID
+      parameters:
+      - description: ID for deleting an annot
+        in: body
+        name: AnnotTypeID
+        required: true
+        schema:
+          $ref: '#/definitions/annot_type_handler.RequestID'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Annotation type not found
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete AnnotType By userID
+      tags:
+      - Annotation types
+  /annotType/gets:
+    post:
+      consumes:
+      - application/json
+      description: Extracts numerous types for a set of IDs
+      parameters:
+      - description: data for getting numerous anotattions
+        in: body
+        name: GetAnnotTypesIDs
+        required: true
+        schema:
+          $ref: '#/definitions/annot_type_handler.RequestIDs'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Annotation not found
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get numerous types by numerous IDs
+      tags:
+      - Annotation types
+  /annotType/getsAll:
+    get:
+      consumes:
+      - application/json
+      description: get all available annot Types
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Annotation type not found
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Getting all available annot types
+      tags:
+      - Annotation types
+  /document/getDocument:
+    post:
       consumes:
       - application/json
       description: Fetches a document file without metadata by its ID
       parameters:
       - description: Document ID
-        in: path
-        name: id
+        in: body
+        name: Document
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/document_handler.RequestID'
       produces:
       - application/pdf
       - application/json
@@ -353,17 +534,18 @@ paths:
       summary: Get document meta data
       tags:
       - Document
-  /document/getReportByID:
-    get:
+  /document/getReport:
+    post:
       consumes:
       - application/json
       description: Fetches a report file without metadata by its ID
       parameters:
-      - description: Document ID
-        in: path
-        name: id
+      - description: Report ID
+        in: body
+        name: ReportID
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/document_handler.RequestID'
       produces:
       - application/pdf
       - application/json
@@ -453,7 +635,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: creates a new user with given login and password
+      description: creates a new user with given login and password the role on creation
+        is sender
       parameters:
       - description: User login and password details
         in: body
@@ -471,6 +654,47 @@ paths:
       summary: SignUp as a user
       tags:
       - Auth
+  /user/getUsers:
+    get:
+      consumes:
+      - application/json
+      description: Get all users parametersm available if you are admin
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: some internal user errror
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all users data (available if admin)
+      tags:
+      - Users
+  /user/role:
+    post:
+      consumes:
+      - application/json
+      description: Set user role, only available if you are admin
+      parameters:
+      - description: data to get the user and change his role
+        in: body
+        name: ChangeUserRoleParams
+        required: true
+        schema:
+          $ref: '#/definitions/user_handler.RequestChangeRole'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Annotation not found
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Change user role (available if admin)
+      tags:
+      - Users
 securityDefinitions:
   ApiKeyAuth:
     in: header
